* Allow to use globals in domain and states
* Add translate attribute on Selection field
* Use explicit join in search SQL query
* Fix for host with IPv6 enable but without default IPv6 route
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release