@@ -14,6 +14,8 @@
                     <field name="type"/>
                     <label name="inherit"/>
                     <field name="inherit"/>
+                    <label name="domain"/>
+                    <field name="domain"/>
                     <label name="field_childs"/>
                     <field name="field_childs"/>
                     <label name="priority"/>
@@ -34,6 +36,7 @@
                     <field name="model" select="1"/>
                     <field name="type" select="1"/>
                     <field name="inherit" select="1"/>
+                    <field name="domain" select="2"/>
                     <field name="field_childs" select="2"/>
                 </tree>
                 ]]>
